--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,8 +1,8 @@
 .Button {
-  padding: 10px;
-  background: hotpink;
+  padding: 10px 20px;
+  background: var(--color-primary);
   color: white;
   border: none;
-  border-radius: 8px;
-  box-shadow: 5px 5px 5px grey;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px #0006;
 }
