--- a/src/components/Grid/Grid.css
+++ b/src/components/Grid/Grid.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-rows: 48px auto 48px;
   height: 100vh;
-  position: fixed;
+  position: fixed; /* damit im mobile gut aussieht */
   top: 0;
   bottom: 0;
   left: 0;
